--- a/README.org
+++ b/README.org
@@ -4,26 +4,6 @@
 #+SETUPFILE: ~/theme-readtheorg.setup
 #+HTML_HEAD: <style>pre.src{background:#343131;color:white;} </style>
 
-* Table of Contents :toc:
-- [[#program-state][Program State]]
-- [[#overview-networks][Overview Networks]]
-- [[#dapp-architecture][DApp Architecture]]
-- [[#byzantine-generals-problem][Byzantine General's Problem]]
-  - [[#image-01][Image 01]]
-  - [[#image-02][Image 02]]
-  - [[#practical-byzantine-fault-tolerance][Practical Byzantine Fault Tolerance]]
-- [[#transaction-flow][Transaction flow]]
-- [[#consensus][Consensus]]
-  - [[#proof-of-work][Proof of Work]]
-  - [[#proof-of-stake][Proof of Stake]]
-- [[#components-or-requirements-of-blockchain][Components or Requirements of Blockchain?]]
-- [[#types-of-blockchain][Types of Blockchain]]
-- [[#what-is-blockchain][What is Blockchain]]
-- [[#decentralized-features][Decentralized Features]]
-  - [[#level-of-decentralization][Level of Decentralization]]
-  - [[#security][Security]]
-  - [[#performance][Performance]]
-
 * Program State
 [[./images/program-state.png]]
 * Overview Networks
@@ -46,7 +26,7 @@
 ** Proof of Stake
 [[./images/pos.png]]
 
-* Components or Requirements of Blockchain?
+* Requirements of Blockchain?
 + High Availability
 + Sustainability
 + Irreversibility
@@ -73,8 +53,37 @@
 * What is Blockchain
 + It can be thought of as =ONE BIG COMPUTER= made up of small computers around the world.
 + All these computers (nodes) are connected to one another and have a full copy of the code and data.
-+ One of the best ways to understand Ethereum is by comparing it with a =traditional client/server architecture=
++ One of the best ways to understand blockchain is by comparing it with a =traditional client/server architecture=
 
+* Components of Blockchain
+** Data Models
++ State Models
++ Account Models
++ Object Models
+** Decentralized Models
++ Permissionless Blockchain
++ Permissioned Blockchain
++ Consortium Blockchain
+** Network Models
++ Asynchronous
++ Synchronous
++ Partial Synchronous
+** =Consensus=
++ PoW/PoS/DPoS
++ Tendermint BFT
++ Doomslug
++ TowerBFT
++ HotStuff
++ Narwhall & bullshark
++ AptosBFT
++ Nominated BFT (GRANDPA & BABE)
++ ...etc
+** Cryptographic schemes
++ Hashing
++ Signature
++ Merkle Tree
++ Pub/Priv Key
++ Zero-Knowledge Proofs
 * Decentralized Features
 ** Level of Decentralization
 + Trilemma
@@ -89,3 +98,21 @@
 ** Performance
 + Communicate - Broadcast Data
 + Argreement among Participants
+
+* Example
+** Install
++ [[https://pureinfotech.com/install-windows-subsystem-linux-2-windows-10/][Install WSL if use Window]]
++ [[https://nodejs.org/en][Install Node.js]] or [[https://github.com/nvm-sh/nvm#installing-and-updating][Node Version Manager]]
++ [[https://www.rust-lang.org/tools/install][Install Rust Lang]]
+  #+begin_src sh :results output
+  curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+  #+end_src
++ [[https://docs.near.org/tools/near-cli][Install near-cli]]
+  #+begin_src sh :results output
+  npm install -g near-cli
+  #+end_src
+
+* Cons
++ Very Slow
++ Expensive
++ High Latency
